<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/textNewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:hint="@string/add_textbox_hint_title" />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:gravity="right"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"  >

        <EditText
            android:id="@+id/textNewToDo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_textbox_hint_suggestion" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonAddToDo"
            android:layout_width="64dip"
            android:layout_height="wrap_content"
            android:onClick="addItem"
            android:text="@string/add_button_text" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewToDo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:listitem="@layout/row_list_to_do"
        android:padding="6dip" >

    </ListView>

</LinearLayout>